<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/welcomescreen"
    tools:context=".NewTrip"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/planImage"
        android:src="@drawable/plan"
        android:layout_marginTop="40dp"
        android:contentDescription="planImage"
        android:visibility="visible" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/TripName"

        android:id="@+id/trip_name"
        android:layout_below="@+id/planImage"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/StartCity"
        android:layout_below="@+id/trip_name"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"

        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/DestinationCity"
        android:layout_below="@+id/StartCity"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"

        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/distance_newtrip"
        android:layout_below="@+id/DestinationCity"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"

        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/DestinationCity"
        android:id="@+id/duration_newtrip"
        android:layout_below="@+id/distance_newtrip"
         />




    <Button
        android:id="@+id/buttonSelectDate"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Date"
        android:layout_below="@+id/duration_newtrip"
        android:layout_alignStart="@+id/DestinationCity"
        android:background="#ffff5f40"
        android:textColor="#ffffffff"
         />

    <Button
        android:id="@+id/buttonSelectTime"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Time"
        android:layout_below="@+id/buttonSelectDate"
        android:layout_alignStart="@+id/buttonSelectDate"
        android:backgroundTint="#ffff5f40"
        android:background="#ffff5f40"
        android:textColor="#ffffffff"
         />
    <Button
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/CreateTrip"
        android:id="@+id/CreateTrip"
        android:layout_below="@+id/buttonSelectTime"
        android:layout_alignStart="@+id/buttonSelectTime"
        android:backgroundTint="#ffff5f40"
        android:background="#ffff5f40"
        android:textColor="#ffffffff"
        android:layout_alignEnd="@+id/buttonSelectTime"
        android:ems="10"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/Cancel"
        android:id="@+id/Cancel"
        android:layout_below="@+id/CreateTrip"
        android:layout_alignStart="@+id/buttonSelectTime"
        android:backgroundTint="#ffff5f40"
        android:background="#ffff5f40"
        android:textColor="#ffffffff"
        android:layout_alignEnd="@+id/buttonSelectTime"
        android:ems="10"/>



</RelativeLayout>
    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#1a1c25"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />
</android.support.v4.widget.DrawerLayout>