<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:scaleType="centerInside"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/imageView"
            android:layout_width="96dp"

            android:layout_height="96dp"

            android:src="@drawable/userplain"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/profileImage"/>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical">
        <!--name-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.Base"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/WelcomeText"
                android:id="@+id/Name"

                android:hint="@string/Name"
                android:ems="10"
                android:layout_centerVertical="true"
                android:inputType="textPersonName"/>

        </android.support.design.widget.TextInputLayout>
<!--                          -->
        <!--email-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/REmailWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameWrapper"
            android:layout_marginTop="4dp"
            android:theme="@style/AppTheme.Base">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Name"
                android:id="@+id/Email"
                android:ems="10"
                android:hint="@string/Email"
                android:layout_centerVertical="true"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>
        <!--                          -->
        <!--Username-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/RUsernameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/usernameWrapper"
            android:layout_marginTop="4dp"
            android:theme="@style/AppTheme.Base">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Name"
                android:id="@+id/RUsername"
                android:ems="10"
                android:hint="@string/Email"
                android:layout_centerVertical="true"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>
        <!--                          -->

        <!--Password-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/RPasswordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/RUsernameWrapper"
            android:layout_marginTop="4dp"
            android:theme="@style/AppTheme.Base">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>
        <!--                          -->
            <!-- Spinner Manufacturer -->
        <com.rey.material.widget.Spinner

            style="@style/Material.Widget.Spinner"
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:singleLine="true"
            android:layout_below="@+id/RPasswordWrapper"
            app:rd_style="@style/Material.Drawable.Ripple.Wave"/>
        <!--                             -->

        <!--      Model                       -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/ModelWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinner1"
            android:layout_marginTop="4dp"
            android:theme="@style/AppTheme.Base">

            <EditText
                android:id="@+id/MotorbikeModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textShortMessage"/>
        </android.support.design.widget.TextInputLayout>

        <!--                             -->

        <!--           Spinner2 Engine size                  -->
        <com.rey.material.widget.Spinner

            style="@style/Material.Widget.Spinner"
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/model"
            android:theme="@style/AppTheme.Base"

            android:entries="@array/engine"
            android:layout_below="@+id/RPasswordWrapper"
            app:rd_style="@style/Material.Drawable.Ripple.Wave"/>

        <!--                             -->


        <Button
            android:id="@+id/Register"
            android:layout_marginTop="40dp"
            android:layout_width="150dp"
            android:background="@drawable/roundedbutton"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text='@string/Register'

            />


    </LinearLayout>

</LinearLayout>
</ScrollView>